--- a/css/desktopTweets.css
+++ b/css/desktopTweets.css
@@ -2,6 +2,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: Helvetica, Arial, sans-serif;
+  overflow: hidden;
 }
 
 .chrome_bird_tweet {
