Removing some inline styles and organizing them into base.css

--- a/css/base.css
+++ b/css/base.css
@@ -247,6 +247,22 @@ input[type='text'] {
   width: 48px;
 }
 
+.tweet img.profile.retweet_source {
+  margin-right: 0px;
+  width: 40px;
+  height: 40px;
+}
+
+.tweet img.profile.retweet_retweeter {
+  margin-bottom: 20px;
+  margin-right: -12px;
+  position: relative;
+  top: 24px;
+  left: -16px;
+  width: 24px;
+  height: 24px;
+}
+
 .tweet img.retweet {
   width: 14px;
   height: 14px;
