--- a/css/base.css
+++ b/css/base.css
@@ -272,6 +272,14 @@ input[type='text'] {
   height: 24px;
 }
 
+.tweet img.verified {
+  width: 14px;
+  height: 14px;
+  margin-right: 2px;
+  margin-top: 1px;
+  vertical-align: top;
+}
+
 .tweet img.retweet {
   width: 14px;
   height: 14px;
