Adding option to show API hits stats inside popup's window.

--- a/css/base.css
+++ b/css/base.css
@@ -321,7 +321,8 @@ input[type='text'] {
   display: inline;
 }
 
-div.popup_footer {
+div#popup_footer {
+  display: none;
   float: right;
   margin-right: 5px;
 }
