Distinguishing tweets from protected users and disabling retweet from them. Closes #133

--- a/css/base.css
+++ b/css/base.css
@@ -273,10 +273,14 @@ input[type='text'] {
 }
 
 .tweet img.verified {
-  width: 14px;
-  height: 14px;
   margin-right: 2px;
   margin-top: 1px;
+  vertical-align: top;
+}
+
+.tweet img.protected {
+  margin-right: 2px;
+  margin-top: 3px;
   vertical-align: top;
 }
 
