Behold the mighty action menu! It still needs lots of work though.

--- a/css/base.css
+++ b/css/base.css
@@ -124,6 +124,7 @@ input[type='text'] {
   padding-right: 35px;
   overflow: auto;
   overflow-x: hidden;
+  position: relative;
 }
 
 #update_tweets {
