--- a/css/base.css
+++ b/css/base.css
@@ -388,3 +388,14 @@ ul.worklist li {
   margin: 0px;
   display: block;
 }
+
+#upload_progress {
+  width: 200px;
+  display: none;
+}
+
+#attach_icon {
+  margin-left: 10px;
+  width: 12px;
+  height: 12px;
+}
