--- a/css/clean.css
+++ b/css/clean.css
@@ -2,7 +2,7 @@
 
 /* Turn on a 16x16 scrollbar */
 ::-webkit-scrollbar {
-  width: 16px;
+  width: 8px;
   height: 16px;
 }
 
@@ -20,23 +20,23 @@
 
 /* Place The scroll down button at the bottom */
 ::-webkit-scrollbar-button:end:increment {
-  background-image: url(darkness-theme/images/scroll_cntrl_dwn.png);
+  background-image: hsla(0, 0%, 0%, .1) url(clean-theme/images/scroll_cntrl_dwn.png);
 }
 
 /* Place The scroll up button at the up */
 ::-webkit-scrollbar-button:start:decrement {
-  background-image: url(darkness-theme/images/scroll_cntrl_up.png);
+  background-image: hsla(0, 0%, 0%, .1) url(clean-theme/images/scroll_cntrl_up.png);
 }
 
 /* Top area above thumb and below up button */
 ::-webkit-scrollbar-track-piece:vertical:start {
-  background-image: url(darkness-theme/images/scroll_gutter_top.png), url(darkness-theme/images/scroll_gutter_mid.png);
+  background-image: hsla(0, 0%, 0%, .1) url(clean-theme/images/scroll_gutter_top.png), url(clean-theme/images/scroll_gutter_mid.png);
   background-repeat: no-repeat, repeat-y;
 }
 
 /* Bottom area below thumb and down button */
 ::-webkit-scrollbar-track-piece:vertical:end {
-  background-image: url(darkness-theme/images/scroll_gutter_btm.png), url(darkness-theme/images/scroll_gutter_mid.png);
+  background-image: hsla(0, 0%, 0%, .1) url(clean-theme/images/scroll_gutter_btm.png), url(clean-theme/images/scroll_gutter_mid.png);
   background-repeat: no-repeat, repeat-y;
   background-position: bottom left, 0 0;
 }
@@ -44,36 +44,32 @@
 /* The thumb itself */
 ::-webkit-scrollbar-thumb:vertical {
   height: 56px;
-  -webkit-border-image: url(darkness-theme/images/scroll_thumb.png) 8 0 8 0 stretch stretch;
-  border-width: 8 0 8 0;
+  -webkit-border-image: url(clean-theme/images/scroll_thumb.png) 8 0 8 0 stretch stretch;
+  /* border-width: 8 0 8 0; */
+  background: hsla(0, 0%, 0%, .1);
 }
 
 
 input[type='text'] {
-  -webkit-border-radius: 5px;
   border: 1px solid #882;
 }
 
 #warning {
-  background-color: #000;
-  color: #eee;
+  /* background-color: #000; */
+  /* color: #eee; */
   padding: 5px;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
 }
 
 #shortener_button div {
-  border-bottom-left-radius: 5px 5px;
-  border-bottom-right-radius: 5px 5px;
-  background-color: #EDEDB1;
+  /* background-color: #EDEDB1; */
 }
 
 #shortener_button div:hover {
-  background-color: #ee7;
+  /* background-color: #ee7; */
 }
 
 #shorten_current {
-  background: #fff url(../img/globe_yellow.png) repeat-x 0 0;
+  background: url(../img/globe_yellow.png) repeat-x 0 0;
 }
 
 #compose_tweet_area textarea {
@@ -81,7 +77,7 @@ input[type='text'] {
 }
 
 .header_link_left, .header_link_left a, .header_link_right {
-  color: #eee;
+  /* color: #eee; */
 }
 
 .header_link_right {
@@ -93,7 +89,7 @@ input[type='text'] {
 }
 
 .chars_left {
-  color: #eee !important;
+  /* color: #eee !important; */
   margin-right:5px;
 }
 
@@ -105,27 +101,23 @@ input[type='text'] {
   outline: inherit;
 }
 
-#workspace {margin: 0 1px; padding: 0; background-color: #000}
+#workspace {margin: 0 1px; padding: 0; /* background-color: #000 */}
 
 #compose_tweet_area input[type="button"], #update_tweets, #compose_tweet {
   -webkit-border-radius: 5px;
-  background: #F58400 url(darkness-theme/images/ui-bg_inset-soft_30_f58400_1x100.png) repeat-x scroll 50% 50%;
-  color: #fff;
+  background: url(clean-theme/images/ui-bg_inset-soft_30_f58400_1x100.png) repeat-x scroll 50% 50%;
+  /* color: #fff; */
   font-style: italic;
   border: 1px solid #FFAF0F;
 }
 
 #compose_tweet_area input[type="button"]:hover, #update_tweets:hover, #compose_tweet:hover {
-  background: #0078A3 url(darkness-theme/images/ui-bg_glass_40_0078a3_1x400.png) repeat-x scroll 50% 50%;
+  background: url(clean-theme/images/ui-bg_glass_40_0078a3_1x400.png) repeat-x scroll 50% 50%;
   border: 1px solid #59B4D4;
 }
 
-.ui-tabs .ui-tabs-nav li a {
-  padding: 0.3em 0.9em;
-}
-
 .tweet {
-  background-color: #000;
+  /* background-color: #000; */
   border-bottom: 1px solid #666;
   margin-bottom: 0.5em;
 }
@@ -151,7 +143,7 @@ input[type='text'] {
 }
 
 .tweet .user {
-  color: #666;
+  /* color: #666; */
   font-weight: bold;
   font-style: italic;
   text-decoration: none;
@@ -159,7 +151,7 @@ input[type='text'] {
 }
 
 .tweet .footer {
-  color: #999;
+  /* color: #999; */
   text-align: right;
   font-style: italic;
   position: absolute;
@@ -173,33 +165,30 @@ input[type='text'] {
 }
 
 .tweet img.profile {
-  -webkit-border-radius: 5px;
 }
 
 .tweet .rt_confirm {
-  -webkit-border-radius: 5px;
-  background-color: #EDEDB1;
-  color: #000000;
+  /* background-color: #EDEDB1; */
+  /* color: #000000; */
 }
 
 .tweet .rt_confirm a {
-  color: #000000;
+  /* color: #000000; */
 }
 
 .tweet .extra_tweet_data {
-  color: #999;
+  /* color: #999; */
 }
 
 /* Simple Select */
 div.simple_select .label {
-  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#F2ED97), color-stop(0.5, #FECE2F), to(#F2ED97));
-  -webkit-border-radius: 8px;
+  /* background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#F2ED97), color-stop(0.5, #FECE2F), to(#F2ED97)); */
   border: 1px solid #FECE2F;
-  color: #381F00;
+  /* color: #381F00; */
 }
 
 div.simple_select .options_area ul li:hover {
-  background-color: rgb(253, 240, 151);
+  /* background-color: rgb(253, 240, 151); */
 }
 
 div.simple_select ul li {
@@ -207,5 +196,5 @@ div.simple_select ul li {
 }
 
 div.simple_select ul li.selected {
-  background-color: rgb(253, 240, 151);
+  /* background-color: rgb(253, 240, 151); */
 }
