--- a/css/clean-theme/jquery-ui-1.7.2.custom.css
+++ b/css/clean-theme/jquery-ui-1.7.2.custom.css
@@ -4,6 +4,10 @@
 * Dual licensed under the MIT (MIT-LICENSE.txt) and GPL (GPL-LICENSE.txt) licenses.
 */
 
+@import url(http://fonts.googleapis.com/css?family=Raleway);
+
+body { font-family: 'Raleway', sans-serif;}
+
 /* Layout helpers
 ----------------------------------*/
 .ui-helper-hidden {
@@ -107,9 +111,7 @@ visit http://jqueryui.com/themeroller/?ffDefault=Helvetica,%20Arial,%20sans-seri
 /* Component containers
 ----------------------------------*/
 .ui-widget {
-	font-family: Helvetica,
-	Arial,
-	sans-serif;
+	font-family: 'Raleway', sans-serif;
 	font-size: 1.0em;
 }
 
@@ -156,7 +158,7 @@ visit http://jqueryui.com/themeroller/?ffDefault=Helvetica,%20Arial,%20sans-seri
 .ui-widget-header .ui-state-default {
 	/* border: 1px solid #666666; */
 	background: url(images/ui-bg_glass_20_555555_1x400.png) 50% 50% repeat-x;
-	font-weight: bold;
+/* 	font-weight: bold; */
 	/* color: #eeeeee; */
 }
 
@@ -175,7 +177,7 @@ visit http://jqueryui.com/themeroller/?ffDefault=Helvetica,%20Arial,%20sans-seri
 .ui-widget-header .ui-state-focus {
 	/* border: 1px solid #59b4d4; */
 	background: url(images/ui-bg_glass_40_0078a3_1x400.png) 50% 50% repeat-x;
-	font-weight: bold;
+/* 	font-weight: bold; */
 	/* color: #ffffff; */
 }
 
@@ -190,7 +192,7 @@ visit http://jqueryui.com/themeroller/?ffDefault=Helvetica,%20Arial,%20sans-seri
 .ui-widget-header .ui-state-active {
 	/* border: 1px solid #ffaf0f; */
 	background: url(images/ui-bg_inset-soft_30_f58400_1x100.png) 50% 50% repeat-x;
-	font-weight: bold;
+/* 	font-weight: bold; */
 	/* color: #ffffff; */
 }
 
@@ -244,7 +246,7 @@ visit http://jqueryui.com/themeroller/?ffDefault=Helvetica,%20Arial,%20sans-seri
 .ui-priority-primary,
 .ui-widget-content .ui-priority-primary,
 .ui-widget-header .ui-priority-primary {
-	font-weight: bold;
+/* 	font-weight: bold; */
 }
 
 .ui-priority-secondary,
